@@ -1,5 +1,9 @@
 2004-12-06  Benoît Dejean  <tazforever@dlfp.org>
 
+	* src/procman.c: (main): Added missing gnome-vfs init/shutdown.
+
+2004-12-06  Benoît Dejean  <tazforever@dlfp.org>
+
 	* src/callbacks.c: (get_icon_for_device), (add_new_disks): Doesn't crash if
 	gnome_vfs_volume_monitor_get_volume_for_path returns NULL.
 	Closes #160560.
